Second network developed

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 
 Experimente
+__pycache__/angio_class.cpython-39.pyc
+__pycache__/angio_class.cpython-39.pyc
+__pycache__/cnn_lstm.cpython-39.pyc
+__pycache__/lighting_train.cpython-39.pyc
+MNIST/raw/t10k-images-idx3-ubyte
+MNIST/raw/t10k-images-idx3-ubyte.gz
+MNIST/raw/t10k-labels-idx1-ubyte
+MNIST/raw/t10k-labels-idx1-ubyte.gz
+MNIST/raw/train-images-idx3-ubyte
+MNIST/raw/train-images-idx3-ubyte.gz
+MNIST/raw/train-labels-idx1-ubyte
+MNIST/raw/train-labels-idx1-ubyte.gz
