--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,34 @@ MNIST/raw/train-images-idx3-ubyte
 MNIST/raw/train-images-idx3-ubyte.gz
 MNIST/raw/train-labels-idx1-ubyte
 MNIST/raw/train-labels-idx1-ubyte.gz
+lightning_logs/version_0/hparams.yaml
+__pycache__/angio_class.cpython-39.pyc
+__pycache__/cnn_lstm_rshp.cpython-39.pyc
+__pycache__/cnn_lstm.cpython-39.pyc
+lightning_logs/version_1/hparams.yaml
+lightning_logs/version_10/hparams.yaml
+lightning_logs/version_11/hparams.yaml
+lightning_logs/version_12/hparams.yaml
+lightning_logs/version_13/hparams.yaml
+lightning_logs/version_14/hparams.yaml
+lightning_logs/version_15/hparams.yaml
+lightning_logs/version_16/hparams.yaml
+lightning_logs/version_17/hparams.yaml
+lightning_logs/version_18/hparams.yaml
+lightning_logs/version_19/hparams.yaml
+lightning_logs/version_2/hparams.yaml
+lightning_logs/version_20/hparams.yaml
+lightning_logs/version_21/hparams.yaml
+lightning_logs/version_22/hparams.yaml
+lightning_logs/version_23/hparams.yaml
+lightning_logs/version_23/metrics.csv
+lightning_logs/version_23/checkpoints/epoch=0-step=10.ckpt
+lightning_logs/version_24/hparams.yaml
+lightning_logs/version_25/hparams.yaml
+lightning_logs/version_3/hparams.yaml
+lightning_logs/version_4/hparams.yaml
+lightning_logs/version_5/hparams.yaml
+lightning_logs/version_6/hparams.yaml
+lightning_logs/version_7/hparams.yaml
+lightning_logs/version_8/hparams.yaml
+lightning_logs/version_9/hparams.yaml
