--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,13 @@ lightning_logs/version_6/hparams.yaml
 lightning_logs/version_7/hparams.yaml
 lightning_logs/version_8/hparams.yaml
 lightning_logs/version_9/hparams.yaml
+lightning_logs/version_26/hparams.yaml
+lightning_logs/version_27/hparams.yaml
+lightning_logs/version_28/hparams.yaml
+lightning_logs/version_29/hparams.yaml
+lightning_logs/version_30/hparams.yaml
+lightning_logs/version_31/hparams.yaml
+lightning_logs/version_32/hparams.yaml
+lightning_logs/version_33/hparams.yaml
+lightning_logs/version_34/hparams.yaml
+lightning_logs/version_35/hparams.yaml
