--- a/config.yaml
+++ b/config.yaml
@@ -2,8 +2,8 @@ data:
   dataset_csv: D:\\Angio\\ANGIO-LSTM\\CSV_experimental.csv
   data_path: D:\\date=angiografii\\data\\data
   annotation: clipping_points.json
-  parent_dir_exp: D:\\ai intro\\Angiografii\\PROIECT_ANGIOGRAFII\\experiments\\Expetimente_Segmentare\\Experiment_Dice_index02082023_1813
-  model: D:\\ai intro\\Angiografii\\PROIECT_ANGIOGRAFII\\experiments\\Expetimente_Segmentare\\Experiment_Dice_index02082023_1813\\Weights\\my_model02102023_1709_e350.pt
+  parent_dir_exp: "D:\\Angio\\ANGIO-LSTM\\Experimente\\Experiment_Dice_index10302023_1124"
+  test_model_checkpoint: "D:\\Angio\\ANGIO-LSTM\\Experimente\\Experiment_Dice_index10302023_1124\\Weights\\lightning_logs\\version_0\\checkpoints\\epoch=599-step=13800.ckpt"
   img_size: [512,512]
   nr_frames: 12 
   split_per:
@@ -12,10 +12,10 @@ data:
     test: 0.1
 
 train:
-  bs: 8
+  bs: 32
   lr: 0.001
-  opt: Adam
-  epochs: 400
+  opt: RMSprop
+  epochs: 600
   rotate_prob: 0.5
   rotate_range: 1.57
   flip_prob : 0.5
