Ciclic learning training

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,326 @@ lightning_logs/version_32/hparams.yaml
 lightning_logs/version_33/hparams.yaml
 lightning_logs/version_34/hparams.yaml
 lightning_logs/version_35/hparams.yaml
+lightning_logs/version_36/hparams.yaml
+config.yaml
+.cometml-runs/3bcfea91f1424c3fb321283291a2d094-QQptTE.zip
+.cometml-runs/a0815b4d64194b48a23496eefc23bfac-tjJmGk.zip
+.cometml-runs/cf142ce997e440ceb2eee4bdf47456ef-YFAjfD.zip
+__pycache__/angio_class.cpython-39.pyc
+__pycache__/cnn_lstm.cpython-39.pyc
+__pycache__/distances.cpython-39.pyc
+lightning_logs/version_37/hparams.yaml
+lightning_logs/version_38/hparams.yaml
+lightning_logs/version_38/metrics.csv
+lightning_logs/version_38/checkpoints/epoch=4-step=475.ckpt
+lightning_logs/version_39/hparams.yaml
+lightning_logs/version_39/metrics.csv
+lightning_logs/version_39/checkpoints/epoch=0-step=95.ckpt
+lightning_logs/version_40/hparams.yaml
+lightning_logs/version_40/metrics.csv
+lightning_logs/version_41/hparams.yaml
+lightning_logs/version_41/metrics.csv
+lightning_logs/version_42/hparams.yaml
+lightning_logs/version_42/metrics.csv
+lightning_logs/version_43/hparams.yaml
+lightning_logs/version_43/metrics.csv
+lightning_logs/version_44/hparams.yaml
+lightning_logs/version_45/hparams.yaml
+lightning_logs/version_45/metrics.csv
+lightning_logs/version_46/hparams.yaml
+lightning_logs/version_46/metrics.csv
+lightning_logs/version_47/hparams.yaml
+lightning_logs/version_47/metrics.csv
+lightning_logs/version_48/hparams.yaml
+lightning_logs/version_48/metrics.csv
+lightning_logs/version_49/hparams.yaml
+lightning_logs/version_50/hparams.yaml
+lightning_logs/version_51/hparams.yaml
+lightning_logs/version_52/hparams.yaml
+lightning_logs/version_53/hparams.yaml
+lightning_logs/version_54/hparams.yaml
+lightning_logs/version_55/hparams.yaml
+lightning_logs/version_56/hparams.yaml
+lightning_logs/version_57/hparams.yaml
+lightning_logs/version_58/hparams.yaml
+lightning_logs/version_59/hparams.yaml
+lightning_logs/version_59/metrics.csv
+lightning_logs/version_60/hparams.yaml
+lightning_logs/version_60/metrics.csv
+lightning_logs/version_61/hparams.yaml
+lightning_logs/version_61/metrics.csv
+lightning_logs/version_62/hparams.yaml
+lightning_logs/version_62/metrics.csv
+lightning_logs/version_63/hparams.yaml
+lightning_logs/version_63/metrics.csv
+lightning_logs/version_64/hparams.yaml
+lightning_logs/version_64/metrics.csv
+lightning_logs/version_65/hparams.yaml
+lightning_logs/version_65/metrics.csv
+lightning_logs/version_66/hparams.yaml
+lightning_logs/version_66/metrics.csv
+lightning_logs/version_67/hparams.yaml
+lightning_logs/version_68/hparams.yaml
+lightning_logs/version_69/hparams.yaml
+lightning_logs/version_70/hparams.yaml
+lightning_logs/version_71/hparams.yaml
+lightning_logs/version_72/hparams.yaml
+lightning_logs/version_73/hparams.yaml
+lightning_logs/version_74/hparams.yaml
+lightning_logs/version_74/metrics.csv
+lightning_logs/version_75/hparams.yaml
+lightning_logs/version_75/metrics.csv
+lightning_logs/version_76/hparams.yaml
+lightning_logs/version_76/metrics.csv
+lightning_logs/version_77/hparams.yaml
+lightning_logs/version_77/metrics.csv
+lightning_logs/version_78/hparams.yaml
+lightning_logs/version_78/metrics.csv
+lightning_logs/version_79/hparams.yaml
+lightning_logs/version_79/metrics.csv
+lightning_logs/version_80/hparams.yaml
+lightning_logs/version_80/metrics.csv
+lightning_logs/version_81/hparams.yaml
+lightning_logs/version_81/metrics.csv
+lightning_logs/version_82/hparams.yaml
+lightning_logs/version_82/metrics.csv
+lightning_logs/version_83/hparams.yaml
+lightning_logs/version_83/metrics.csv
+lightning_logs/version_84/hparams.yaml
+lightning_logs/version_85/hparams.yaml
+lightning_logs/version_85/metrics.csv
+lightning_logs/version_86/hparams.yaml
+lightning_logs/version_86/metrics.csv
+lightning_logs/version_87/hparams.yaml
+lightning_logs/version_87/metrics.csv
+lightning_logs/version_88/hparams.yaml
+lightning_logs/version_88/metrics.csv
+lightning_logs/version_89/hparams.yaml
+lightning_logs/version_89/metrics.csv
+lightning_logs/version_90/hparams.yaml
+lightning_logs/version_90/metrics.csv
+lightning_logs/version_91/hparams.yaml
+lightning_logs/version_91/metrics.csv
+lightning_logs/version_92/hparams.yaml
+lightning_logs/version_92/metrics.csv
+lightning_logs/version_93/hparams.yaml
+lightning_logs/version_93/metrics.csv
+lightning_logs/version_94/hparams.yaml
+lightning_logs/version_94/metrics.csv
+lightning_logs/version_95/hparams.yaml
+lightning_logs/version_95/metrics.csv
+lightning_logs/version_96/hparams.yaml
+lightning_logs/version_97/hparams.yaml
+lightning_logs/version_97/metrics.csv
+lightning_logs/version_98/hparams.yaml
+lightning_logs/version_98/metrics.csv
+lightning_logs/version_118/hparams.yaml
+lightning_logs/version_116/hparams.yaml
+lightning_logs/version_117/hparams.yaml
+lightning_logs/version_119/hparams.yaml
+lightning_logs/version_120/hparams.yaml
+lightning_logs/version_121/hparams.yaml
+lightning_logs/version_122/hparams.yaml
+lightning_logs/version_122/metrics.csv
+lightning_logs/version_123/hparams.yaml
+lightning_logs/version_123/metrics.csv
+lightning_logs/version_124/hparams.yaml
+lightning_logs/version_125/hparams.yaml
+lightning_logs/version_125/metrics.csv
+lightning_logs/version_126/hparams.yaml
+lightning_logs/version_126/metrics.csv
+lightning_logs/version_127/hparams.yaml
+lightning_logs/version_127/metrics.csv
+lightning_logs/version_128/hparams.yaml
+lightning_logs/version_129/hparams.yaml
+lightning_logs/version_130/hparams.yaml
+lightning_logs/version_131/hparams.yaml
+lightning_logs/version_132/hparams.yaml
+lightning_logs/version_132/metrics.csv
+lightning_logs/version_133/hparams.yaml
+lightning_logs/version_133/metrics.csv
+lightning_logs/version_134/hparams.yaml
+lightning_logs/version_135/hparams.yaml
+lightning_logs/version_135/metrics.csv
+lightning_logs/version_136/hparams.yaml
+lightning_logs/version_136/metrics.csv
+lightning_logs/version_137/hparams.yaml
+lightning_logs/version_137/metrics.csv
+lightning_logs/version_138/hparams.yaml
+lightning_logs/version_138/metrics.csv
+lightning_logs/version_139/hparams.yaml
+lightning_logs/version_139/metrics.csv
+lightning_logs/version_140/hparams.yaml
+lightning_logs/version_140/metrics.csv
+lightning_logs/version_141/hparams.yaml
+lightning_logs/version_141/metrics.csv
+lightning_logs/version_142/hparams.yaml
+lightning_logs/version_143/hparams.yaml
+lightning_logs/version_144/hparams.yaml
+lightning_logs/version_145/hparams.yaml
+lightning_logs/version_146/hparams.yaml
+lightning_logs/version_147/hparams.yaml
+lightning_logs/version_148/hparams.yaml
+lightning_logs/version_149/hparams.yaml
+lightning_logs/version_150/hparams.yaml
+lightning_logs/version_151/hparams.yaml
+lightning_logs/version_152/hparams.yaml
+lightning_logs/version_153/hparams.yaml
+lightning_logs/version_154/hparams.yaml
+lightning_logs/version_155/hparams.yaml
+lightning_logs/version_156/hparams.yaml
+lightning_logs/version_157/hparams.yaml
+lightning_logs/version_157/metrics.csv
+lightning_logs/version_158/hparams.yaml
+lightning_logs/version_158/metrics.csv
+lightning_logs/version_159/hparams.yaml
+lightning_logs/version_159/metrics.csv
+lightning_logs/version_161/hparams.yaml
+lightning_logs/version_162/hparams.yaml
+lightning_logs/version_163/hparams.yaml
+lightning_logs/version_163/metrics.csv
+lightning_logs/version_164/hparams.yaml
+lightning_logs/version_164/metrics.csv
+lightning_logs/version_165/hparams.yaml
+lightning_logs/version_165/metrics.csv
+lightning_logs/version_166/hparams.yaml
+lightning_logs/version_166/metrics.csv
+lightning_logs/version_167/hparams.yaml
+lightning_logs/version_167/metrics.csv
+lightning_logs/version_168/hparams.yaml
+lightning_logs/version_168/metrics.csv
+lightning_logs/version_169/hparams.yaml
+lightning_logs/version_169/metrics.csv
+lightning_logs/version_170/hparams.yaml
+lightning_logs/version_170/metrics.csv
+lightning_logs/version_171/hparams.yaml
+lightning_logs/version_171/metrics.csv
+lightning_logs/version_172/hparams.yaml
+lightning_logs/version_172/metrics.csv
+lightning_logs/version_173/hparams.yaml
+lightning_logs/version_174/hparams.yaml
+lightning_logs/version_175/hparams.yaml
+lightning_logs/version_175/metrics.csv
+lightning_logs/version_176/hparams.yaml
+lightning_logs/version_176/metrics.csv
+lightning_logs/version_177/hparams.yaml
+lightning_logs/version_177/metrics.csv
+lightning_logs/version_178/hparams.yaml
+lightning_logs/version_178/metrics.csv
+lightning_logs/version_179/hparams.yaml
+lightning_logs/version_179/metrics.csv
+lightning_logs/version_180/hparams.yaml
+lightning_logs/version_180/metrics.csv
+lightning_logs/version_181/hparams.yaml
+lightning_logs/version_181/metrics.csv
+lightning_logs/version_182/hparams.yaml
+lightning_logs/version_182/metrics.csv
+lightning_logs/version_183/hparams.yaml
+lightning_logs/version_184/hparams.yaml
+lightning_logs/version_184/metrics.csv
+lightning_logs/version_185/hparams.yaml
+lightning_logs/version_187/hparams.yaml
+lightning_logs/version_190/hparams.yaml
+lightning_logs/version_190/metrics.csv
+lightning_logs/version_191/hparams.yaml
+lightning_logs/version_192/hparams.yaml
+lightning_logs/version_193/hparams.yaml
+lightning_logs/version_194/hparams.yaml
+lightning_logs/version_195/hparams.yaml
+lightning_logs/version_196/hparams.yaml
+lightning_logs/version_197/hparams.yaml
+lightning_logs/version_197/metrics.csv
+lightning_logs/version_198/hparams.yaml
+lightning_logs/version_199/hparams.yaml
+lightning_logs/version_199/metrics.csv
+lightning_logs/version_200/hparams.yaml
+lightning_logs/version_200/metrics.csv
+lightning_logs/version_201/hparams.yaml
+lightning_logs/version_201/metrics.csv
+lightning_logs/version_202/hparams.yaml
+lightning_logs/version_203/hparams.yaml
+lightning_logs/version_203/metrics.csv
+lightning_logs/version_204/hparams.yaml
+lightning_logs/version_204/metrics.csv
+lightning_logs/version_205/hparams.yaml
+lightning_logs/version_205/metrics.csv
+lightning_logs/version_206/hparams.yaml
+lightning_logs/version_207/hparams.yaml
+lightning_logs/version_207/metrics.csv
+lightning_logs/version_208/hparams.yaml
+lightning_logs/version_209/hparams.yaml
+lightning_logs/version_210/hparams.yaml
+lightning_logs/version_211/hparams.yaml
+lightning_logs/version_211/metrics.csv
+lightning_logs/version_212/hparams.yaml
+lightning_logs/version_213/hparams.yaml
+lightning_logs/version_213/metrics.csv
+lightning_logs/version_214/hparams.yaml
+lightning_logs/version_215/hparams.yaml
+lightning_logs/version_215/metrics.csv
+lightning_logs/version_216/hparams.yaml
+lightning_logs/version_216/metrics.csv
+lightning_logs/version_217/hparams.yaml
+lightning_logs/version_218/hparams.yaml
+lightning_logs/version_219/hparams.yaml
+lightning_logs/version_220/hparams.yaml
+lightning_logs/version_220/metrics.csv
+lightning_logs/version_221/hparams.yaml
+lightning_logs/version_222/hparams.yaml
+lightning_logs/version_222/metrics.csv
+lightning_logs/version_223/hparams.yaml
+lightning_logs/version_223/metrics.csv
+lightning_logs/version_224/hparams.yaml
+lightning_logs/version_224/metrics.csv
+lightning_logs/version_225/hparams.yaml
+lightning_logs/version_225/metrics.csv
+lightning_logs/version_226/hparams.yaml
+lightning_logs/version_226/metrics.csv
+lightning_logs/version_227/hparams.yaml
+lightning_logs/version_228/hparams.yaml
+lightning_logs/version_228/metrics.csv
+lightning_logs/version_229/hparams.yaml
+lightning_logs/version_229/metrics.csv
+lightning_logs/version_230/hparams.yaml
+lightning_logs/version_230/metrics.csv
+lightning_logs/version_99/hparams.yaml
+lightning_logs/version_104/hparams.yaml
+lightning_logs/version_104/metrics.csv
+lightning_logs/version_105/hparams.yaml
+lightning_logs/version_106/hparams.yaml
+lightning_logs/version_106/metrics.csv
+lightning_logs/version_107/hparams.yaml
+lightning_logs/version_108/hparams.yaml
+lightning_logs/version_109/hparams.yaml
+lightning_logs/version_109/metrics.csv
+lightning_logs/version_110/hparams.yaml
+lightning_logs/version_110/metrics.csv
+lightning_logs/version_111/hparams.yaml
+lightning_logs/version_112/hparams.yaml
+lightning_logs/version_113/hparams.yaml
+lightning_logs/version_114/hparams.yaml
+lightning_logs/version_115/hparams.yaml
+PERCENT_HIST.jpeg
+.cometml-runs/5a3c5b7ddcb74203b8bc5423eccaf093-hXSdwl.zip
+.cometml-runs/9d559bff89e5434fb48911ae6d47afd6-yZlRCJ.zip
+.cometml-runs/19a963c0bf114df8b7050cba6d5a3e49-INUlsg.zip
+.cometml-runs/145b9336467b45a39ea5bcc068ad50d9-TrpZuF.zip
+.cometml-runs/b47bac7a936d4f55b7c10192d8d3f0a8-TjPTWY.zip
+.cometml-runs/b4183d94bf224745bc5038d807ced2c0-zBkOmr.zip
+.cometml-runs/febcf7bc97b94e30bed74117902d5e87-BiKjAj.zip
+__pycache__/angio_class.cpython-39.pyc
+__pycache__/cnn_lstm.cpython-39.pyc
+lightning_logs/version_100/hparams.yaml
+lightning_logs/version_101/hparams.yaml
+lightning_logs/version_102/hparams.yaml
+lightning_logs/version_102/metrics.csv
+lightning_logs/version_103/hparams.yaml
+lightning_logs/version_103/metrics.csv
+.lr_find_1ff78511-9f2e-41ff-a509-fc66924dd526.ckpt
+.lr_find_8a62a246-4c1d-4b03-b8bc-376468ff1b9c.ckpt
+.lr_find_17e9325b-df09-487b-a192-2ca2ce83bf6a.ckpt
+.lr_find_4990fe5b-5a16-4c7e-b7ff-c746ac58509d.ckpt
+Ann.csv
+lr_find.png
+__pycache__/angio_class.cpython-39.pyc
+__pycache__/cnn_lstm.cpython-39.pyc
