--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,18 @@ Ann.csv
 lr_find.png
 __pycache__/angio_class.cpython-39.pyc
 __pycache__/cnn_lstm.cpython-39.pyc
+lightning_logs/version_231/hparams.yaml
+lightning_logs/version_231/metrics.csv
+lightning_logs/version_232/hparams.yaml
+lightning_logs/version_232/metrics.csv
+lightning_logs/version_233/hparams.yaml
+lightning_logs/version_233/metrics.csv
+lightning_logs/version_234/hparams.yaml
+lightning_logs/version_234/metrics.csv
+lightning_logs/version_235/hparams.yaml
+lightning_logs/version_236/hparams.yaml
+lightning_logs/version_236/metrics.csv
+lightning_logs/version_237/hparams.yaml
+lightning_logs/version_237/metrics.csv
+lightning_logs/version_238/hparams.yaml
+lightning_logs/version_238/metrics.csv
